--- a/Next.html
+++ b/Next.html
@@ -7,7 +7,7 @@
         <div class="main">
             <nav>
                 <div class="logo">
-                    <img src="C:\codes\project\pics\hug.gif"
+                    <img src="codes\project\pics\hug.gif"
                     width="375" 
                     height="375">
                 </div>
