--- a/Next.html
+++ b/Next.html
@@ -7,9 +7,10 @@
         <div class="main">
             <nav>
                 <div class="logo">
-                    <img src="codes\project\pics\hug.gif"
-                    width="375" 
-                    height="375">
+                    <img src="https://media1.tenor.com/m/cJwuW3Z1CzUAAAAC/bubu-dudu-kisses.gif"
+                    width="325" 
+                    height="325"
+                    alt="Animated GIF">
                 </div>
 
                 <div class="text">
