--- a/Next.html
+++ b/Next.html
@@ -9,8 +9,7 @@
                 <div class="logo">
                     <img src="https://media1.tenor.com/m/cJwuW3Z1CzUAAAAC/bubu-dudu-kisses.gif"
                     width="325" 
-                    height="325"
-                    alt="Animated GIF">
+                    height="325">
                 </div>
 
                 <div class="text">
