--- a/Next.html
+++ b/Next.html
@@ -7,7 +7,7 @@
         <div class="main">
             <nav>
                 <div class="logo">
-                    <img src="https://media1.tenor.com/m/cJwuW3Z1CzUAAAAC/bubu-dudu-kisses.gif"
+                    <img src="https://media.tenor.com/V963h-HMxd0AAAAj/tkthao219-bubududu.gif"
                     width="325" 
                     height="325">
                 </div>
