--- a/Letter.html
+++ b/Letter.html
@@ -25,7 +25,7 @@
                             };
                         </script>
 
-                   <button id = "btn2" onclick="sad()" class="no"> NO! </button>
+                   <button id = "btn2" onclick="sad()" class="no"> Are You Sure? </button>
 
                    <script type="text/javascript">
                     document.getElementById("btn2").onclick = function () {
