--- a/Letter6.html
+++ b/Letter6.html
@@ -25,11 +25,11 @@
                             };
                         </script>
 
-                   <button id = "btn2" onclick="sad()" class="no"> last chance? </button>
+                   <button id = "btn2" onclick="sad()" class="no"> No Chance? </button>
 
                    <script type="text/javascript">
                     document.getElementById("btn2").onclick = function () {
-                        location.href = "https://telosaallen.github.io/Next/Next.html";
+                        location.href = "https://telosaallen.github.io/Next/Letter.html";
                     };
                 </script>
                 </div>
