--- a/Letter2.html
+++ b/Letter2.html
@@ -29,7 +29,7 @@
 
                    <script type="text/javascript">
                     document.getElementById("btn2").onclick = function () {
-                        location.href = "https://telosaallen.github.io/Next/Next.html";
+                        location.href = "https://telosaallen.github.io/Next/Letter3.html";
                     };
                 </script>
                 </div>
