--- a/Letter3.html
+++ b/Letter3.html
@@ -21,7 +21,7 @@
                 
                         <script type="text/javascript">
                             document.getElementById("btn").onclick = function () {
-                                location.href = "https://telosaallen.github.io/Next/Next.html";
+                                location.href = "https://telosaallen.github.io/Next/Letter4.html";
                             };
                         </script>
 
