--- a/Letter.html
+++ b/Letter.html
@@ -29,7 +29,7 @@
 
                    <script type="text/javascript">
                     document.getElementById("btn2").onclick = function () {
-                        location.href = "https://telosaallen.github.io/Next/Letter2.html;
+                        location.href = "https://telosaallen.github.io/Next/Letter2.html";
                     };
                 </script>
                 </div>
