--- a/Letter6.html
+++ b/Letter6.html
@@ -25,7 +25,7 @@
                             };
                         </script>
 
-                   <button id = "btn2" onclick="sad()" class="no"> No Chance? </button>
+                   <button id = "btn2" onclick="sad()" class="no"> No Doubt?</button>
 
                    <script type="text/javascript">
                     document.getElementById("btn2").onclick = function () {
